2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/main.c:
	* src/parser.c:
	* src/simulation.c: Small memory handling improvements to fix some
	Valgrind warnings.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/main-window.c:
	* src/parser.c: Many small interface improvements, such as padding,
	spacing and default focus. Addition of keyboard shortcuts for most
	of the actions which don't have them. Some more small improvements
	to error highlighting.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* data/Makefile.am:
	* data/ocr-assembly.lang:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c: Added syntax highlighting support.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/interface.c:
	* src/main-window.c:
	* src/main.c:
	* src/main.h: Added printing support and cleaned up the file operation
	code a little.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/main-window.c:
	* src/main.c:
	* src/main.h: Added file load/save support.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main-window.h:
	* src/simulation.c: Finalised the menu structure, implemented a few
	more of the menu items, added support for step-through execution,
	and cleaned up some error reporting code.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui: Merged the "Compile" operation into the "Run"
	operation.
	* src/instructions.h:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.h:
	* src/parser.c:
	* src/parser.h:
	* src/simulation.c: Various code cleanups, including a rearrangement
	of some of the parser code to make it more logical. Lots of polish
	applied to the error reporting, and added tagging of the relevant code
	in the editor when an error is encountered.

2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>
