@@ -23,6 +23,17 @@ AC_ARG_ENABLE([debug],
 AM_CONDITIONAL([DEBUG], [test x$debug = xtrue])
 
 dnl ***************************************************************************
+dnl Windows support
+dnl ***************************************************************************
+
+case "${host}" in
+        i[[3456789]]86-*-mingw32*) WIN32="yes" ;;
+        *cygwin*) WIN32="yes" ;;
+        *) WIN32="no" ;;
+esac
+AM_CONDITIONAL([WIN32], test "$WIN32" = "yes")
+
+dnl ***************************************************************************
 dnl Internationalisation
 dnl ***************************************************************************
 
